--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,3 +10,7 @@ jobs:
       matrix:
         version:
           - '0.17'
+          - '0.17/alpine'
+          - '0.15'
+          - '0.15/alpine'
+      fail-fast: false
