Org auto-commit

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,3 +15,5 @@ jobs:
           - '0.15/alpine'
       fail-fast: false
     steps:
+      - name: Set up Docker Buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
