fix deprecation warnings

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,3 +38,8 @@ jobs:
             else
               TAGS+=("$REPO:$TAG")
             fi
+            TAG_MAJOR_MINOR=$(echo $TAG | cut -c -4)
+            if [ $(version ${TAG_MAJOR_MINOR}) -ne $(version ${BITCOIN_GOLD_VERSION}) ]; then
+              echo "Skipping build of base image $BITCOIN_GOLD_VERSION/ as ${TAG} is targeted at ${TAG_MAJOR_MINOR}/"
+              exit 0
+            fi
