--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,3 +47,6 @@ jobs:
             TAGS=("$REPO:${BITCOIN_GOLD_VERSION/\//-}")
             if [ $(version ${BITCOIN_GOLD_VERSION}) -ge $(version ${LATEST_BITCOIN_GOLD_MAJOR_VERSION}) ]; then
               echo "Version $(version ${BITCOIN_GOLD_VERSION}) is greater than or equal to $(version ${LATEST_BITCOIN_GOLD_MAJOR_VERSION}), tagging as latest"
+              if [[ ${BITCOIN_GOLD_VERSION} != *"alpine"* ]]; then
+                TAGS+=("$REPO:latest")
+              else
