--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,3 +57,4 @@ jobs:
               PUSH=true
             fi
           fi
+          echo ::set-output name=build_date::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
