--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,3 +58,6 @@ jobs:
             fi
           fi
           echo ::set-output name=build_date::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+          echo ::set-output name=push::${PUSH}
+          echo ::set-output name=tags::${TAGS[@]}
+          echo ::set-env name=build::true
