--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -68,3 +68,4 @@ jobs:
           DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
         run: |
           docker login --username ${DOCKER_HUB_USERNAME} --password ${DOCKER_HUB_PASSWORD}
+      - if: env.build == 'true'
