--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -77,3 +77,6 @@ jobs:
           echo "Tags: ${{ steps.prepare.outputs.tags }}"
           echo docker buildx build \
             --output "type=image,push=${{steps.prepare.outputs.push}}" \
+            --progress=plain \
+            --build-arg "BUILD_DATE=${{ steps.prepare.outputs.build_date }}" \
+            --build-arg "VCS_REF=${GITHUB_SHA::8}" \
