--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -80,3 +80,4 @@ jobs:
             --progress=plain \
             --build-arg "BUILD_DATE=${{ steps.prepare.outputs.build_date }}" \
             --build-arg "VCS_REF=${GITHUB_SHA::8}" \
+            $(printf "%s" "${TAGS[@]/#/ --tag }" ) \
