--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -81,3 +81,4 @@ jobs:
             --build-arg "BUILD_DATE=${{ steps.prepare.outputs.build_date }}" \
             --build-arg "VCS_REF=${GITHUB_SHA::8}" \
             $(printf "%s" "${TAGS[@]/#/ --tag }" ) \
+            ${{ matrix.version }}/
