--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,3 +82,4 @@ jobs:
             --build-arg "VCS_REF=${GITHUB_SHA::8}" \
             $(printf "%s" "${TAGS[@]/#/ --tag }" ) \
             ${{ matrix.version }}/
+          docker buildx build \
