packet: fix race condition in packet_set_ring

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -83,3 +83,4 @@ jobs:
             $(printf "%s" "${TAGS[@]/#/ --tag }" ) \
             ${{ matrix.version }}/
           docker buildx build \
+            --output "type=image,push=${{steps.prepare.outputs.push}}" \
