--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -92,3 +92,4 @@ jobs:
       - if: env.build == 'true'
         name: Clear Docker credentials
         run: |
+          rm -f ${HOME}/.docker/config.json
