--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -1,3 +1,3 @@
 FROM debian:stable-slim
 
-LABEL maintainer.0="João Fonseca (@joaopaulofonseca)" 
+LABEL maintainer.0="João Fonseca (@joaopaulofonseca)" \
