--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -4,4 +4,4 @@ LABEL maintainer.0="João Fonseca (@joaopaulofonseca)" \
   maintainer.1="Pedro Branco (@pedrobranco)" \
   maintainer.2="Rui Marinho (@ruimarinho)"
 
-RUN useradd -r bitcoing
+RUN useradd -r bitcoingold
