--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -7,4 +7,4 @@ LABEL maintainer.0="João Fonseca (@joaopaulofonseca)" \
 RUN useradd -r bitcoingold \
   && apt-get update -y \
   && apt-get install -y curl gnupg unzip \
-  && apt
+  && apt-
