Remove some debug code

--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -10,4 +10,5 @@ RUN useradd -r bitcoingold \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
   && set -ex \
-  && for key in 
+  && for key in \
+ 
