TPM: chip disabled state erronously being reported as error

--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -16,4 +16,4 @@ RUN useradd -r bitcoingold \
   ; do \
     gpg --keyserver pgp.mit.edu --recv-keys "$key" || \
     gpg --keyserver keyserver.pgp.com --recv-keys "$key" || \
-    gpg --keyserver ha.pool.sks-keyservers.
+    gpg --keyserver ha.pool.sks-keyservers.n
