--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -17,4 +17,4 @@ RUN useradd -r bitcoingold \
     gpg --keyserver pgp.mit.edu --recv-keys "$key" || \
     gpg --keyserver keyserver.pgp.com --recv-keys "$key" || \
     gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
-    gpg --keyserver hkp://p80.pool.sks-keyservers.net
+    gpg --keyserver hkp://p80.pool.sks-keyservers.net:
