Remove unused attributes

--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -18,4 +18,5 @@ RUN useradd -r bitcoingold \
     gpg --keyserver keyserver.pgp.com --recv-keys "$key" || \
     gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
     gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "$key" ; \
-  d
+  done
+
