just in progress

--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -31,4 +31,4 @@ RUN curl -o /usr/local/bin/gosu -fSL https://github.com/tianon/gosu/releases/dow
 ENV BITCOIN_GOLD_VERSION=0.15.2
 ENV BITCOIN_GOLD_FOLDER_VERSION=0.15.2
 ENV BITCOIN_GOLD_PREFIX=/opt/bitcoin-gold-${BITCOIN_GOLD_FOLDER_VERSION}
-ENV BITCOIN_GOLD_DATA=/home
+ENV BITCOIN_GOLD_DATA=/home/b
