--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -32,4 +32,4 @@ ENV BITCOIN_GOLD_VERSION=0.15.2
 ENV BITCOIN_GOLD_FOLDER_VERSION=0.15.2
 ENV BITCOIN_GOLD_PREFIX=/opt/bitcoin-gold-${BITCOIN_GOLD_FOLDER_VERSION}
 ENV BITCOIN_GOLD_DATA=/home/bitcoingold/.bitcoingold
-ENV PATH=${BITCOIN_GOLD_PREFIX}/b
+ENV PATH=${BITCOIN_GOLD_PREFIX}/bin:$PA
