--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -36,4 +36,4 @@ ENV PATH=${BITCOIN_GOLD_PREFIX}/bin:$PATH
 RUN curl -SLO https://github.com/BTCGPU/BTCGPU/releases/download/v${BITCOIN_GOLD_VERSION}/bitcoin-gold-${BITCOIN_GOLD_FOLDER_VERSION}-x86_64-linux-gnu.tar.gz \
   && curl -SLO https://github.com/BTCGPU/BTCGPU/releases/download/v${BITCOIN_GOLD_VERSION}/SHA256SUMS.asc \
   && gpg --verify SHA256SUMS.asc \
-  && grep " bitcoin-gold-${BITCOIN_GOLD_FOLDER_V
+  && grep " bitcoin-gold-${BITCOIN_GOLD_FOLDER_VER
