--- a/0.15/Dockerfile
+++ b/0.15/Dockerfile
@@ -42,4 +42,5 @@ RUN curl -SLO https://github.com/BTCGPU/BTCGPU/releases/download/v${BITCOIN_GOLD
 
 COPY docker-entrypoint.sh /entrypoint.sh
 
-VOLUME ["/home/bitcoingold/.bitcoingold"
+VOLUME ["/home/bitcoingold/.bitcoingold"]
+
