--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -5,3 +5,4 @@ FROM alpine as berkeleydb
 RUN apk --no-cache add autoconf
 RUN apk --no-cache add automake
 RUN apk --no-cache add build-base
+RUN apk --no-cache add libressl
