block: fiops read/write request scale

--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -11,3 +11,4 @@ ENV BERKELEYDB_VERSION=db-4.8.30.NC
 ENV BERKELEYDB_PREFIX=/opt/${BERKELEYDB_VERSION}
 
 RUN wget https://download.oracle.com/berkeley-db/${BERKELEYDB_VERSION}.tar.gz
+RUN tar -xzf *.tar.gz
