--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -19,3 +19,5 @@ WORKDIR /${BERKELEYDB_VERSION}/build_unix
 
 RUN ../dist/configure --enable-cxx --disable-shared --with-pic --prefix=${BERKELEYDB_PREFIX}
 RUN make -j4
+RUN make install
+RUN rm -rf ${BERKELEYDB_PREFIX}/docs
