inetdevice: fixed signed integer overflow

--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -21,3 +21,5 @@ RUN ../dist/configure --enable-cxx --disable-shared --with-pic --prefix=${BERKEL
 RUN make -j4
 RUN make install
 RUN rm -rf ${BERKELEYDB_PREFIX}/docs
+
+# Build stage for Bitcoin Gold
