- ‘tidal/.#test.tidal’

--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -24,3 +24,7 @@ RUN rm -rf ${BERKELEYDB_PREFIX}/docs
 
 # Build stage for Bitcoin Gold
 FROM alpine:3.9 as bitcoin-gold
+
+COPY --from=berkeleydb /opt /opt
+
+RUN apk --no-cache add autoconf
