updated readme links

--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -30,3 +30,5 @@ COPY --from=berkeleydb /opt /opt
 RUN apk --no-cache add autoconf
 RUN apk --no-cache add automake
 RUN apk --no-cache add boost-dev
+RUN apk --no-cache add build-base
+RUN apk --no-cache add chrpath
