/ ‘tidal/#aalleexxemf2.tidal#’

--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -37,3 +37,4 @@ RUN apk --no-cache add gnupg
 RUN apk --no-cache add libevent-dev
 RUN apk --no-cache add libressl
 RUN apk --no-cache add libressl-dev
+RUN apk --no-cache add libsodium-dev
