--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -38,3 +38,4 @@ RUN apk --no-cache add libevent-dev
 RUN apk --no-cache add libressl
 RUN apk --no-cache add libressl-dev
 RUN apk --no-cache add libsodium-dev
+RUN apk --no-cache add libtool
