--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -39,3 +39,5 @@ RUN apk --no-cache add libressl
 RUN apk --no-cache add libressl-dev
 RUN apk --no-cache add libsodium-dev
 RUN apk --no-cache add libtool
+RUN apk --no-cache add linux-headers
+RUN apk --no-cache add protobuf-dev
