--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -45,3 +45,7 @@ RUN apk --no-cache add zeromq-dev
 
 RUN set -ex \
   && for key in \
+    38EE12EB597B4FC0 \
+  ; do \
+  gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
+  gpg --keyserver pgp.mit.edu --recv-keys "$key" || \
