--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -49,3 +49,4 @@ RUN set -ex \
   ; do \
   gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
   gpg --keyserver pgp.mit.edu --recv-keys "$key" || \
+  gpg --keyserver keyserver.pgp.com --recv-keys "$key" || \
