--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -50,3 +50,5 @@ RUN set -ex \
   gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
   gpg --keyserver pgp.mit.edu --recv-keys "$key" || \
   gpg --keyserver keyserver.pgp.com --recv-keys "$key" || \
+  gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "$key" ; \
+  done
