--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -55,3 +55,4 @@ RUN set -ex \
 
 ENV BITCOIN_GOLD_VERSION=0.15.2
 ENV BITCOIN_GOLD_FOLDER_VERSION=0.15.2
+ENV BITCOIN_GOLD_PREFIX=/opt/bitcoin-gold-${BITCOIN_GOLD_VERSION}
