--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -56,3 +56,4 @@ RUN set -ex \
 ENV BITCOIN_GOLD_VERSION=0.15.2
 ENV BITCOIN_GOLD_FOLDER_VERSION=0.15.2
 ENV BITCOIN_GOLD_PREFIX=/opt/bitcoin-gold-${BITCOIN_GOLD_VERSION}
+ENV BITCOIN_GOLD_SHASUM="b0e568e87ce4b3ca7a3170c12fc039a94c412cbceefadeb3e7bc13c282007759  ${BITCOIN_GOLD_FOLDER_VERSION}.tar.gz"
