--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -62,3 +62,4 @@ RUN wget https://github.com/BTCGPU/BTCGPU/releases/download/v${BITCOIN_GOLD_VERS
 RUN wget https://github.com/BTCGPU/BTCGPU/releases/download/v${BITCOIN_GOLD_VERSION}/SHA256SUMS.asc
 RUN gpg --verify SHA256SUMS.asc
 RUN grep " bitcoin-gold-${BITCOIN_GOLD_FOLDER_VERSION}.tar.gz\$" SHA256SUMS.asc | sha256sum -c -
+RUN tar -xzf *.tar.gz
