--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -67,3 +67,4 @@ RUN tar -xzf *.tar.gz
 WORKDIR /bitcoin-gold-${BITCOIN_GOLD_FOLDER_VERSION}
 
 RUN sed -i '/AC_PREREQ/a\AR_FLAGS=cr' src/univalue/configure.ac
+RUN sed -i '/AX_PROG_CC_FOR_BUILD/a\AR_FLAGS=cr' src/secp256k1/configure.ac
