--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -69,3 +69,4 @@ WORKDIR /bitcoin-gold-${BITCOIN_GOLD_FOLDER_VERSION}
 RUN sed -i '/AC_PREREQ/a\AR_FLAGS=cr' src/univalue/configure.ac
 RUN sed -i '/AX_PROG_CC_FOR_BUILD/a\AR_FLAGS=cr' src/secp256k1/configure.ac
 RUN sed -i s:sys/fcntl.h:fcntl.h: src/compat.h
+RUN ./autogen.sh
