--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -70,3 +70,7 @@ RUN sed -i '/AC_PREREQ/a\AR_FLAGS=cr' src/univalue/configure.ac
 RUN sed -i '/AX_PROG_CC_FOR_BUILD/a\AR_FLAGS=cr' src/secp256k1/configure.ac
 RUN sed -i s:sys/fcntl.h:fcntl.h: src/compat.h
 RUN ./autogen.sh
+RUN ./configure LDFLAGS=-L`ls -d /opt/db*`/lib/ CPPFLAGS=-I`ls -d /opt/db*`/include/ \
+    --prefix=${BITCOIN_GOLD_PREFIX} \
+    --mandir=/usr/share/man \
+    --disable-tests \
