--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -86,3 +86,4 @@ RUN strip ${BITCOIN_GOLD_PREFIX}/bin/bgold-cli
 RUN strip ${BITCOIN_GOLD_PREFIX}/bin/bitcoin-tx
 RUN strip ${BITCOIN_GOLD_PREFIX}/bin/bgoldd
 RUN strip ${BITCOIN_GOLD_PREFIX}/lib/libbitcoinconsensus.a
+RUN strip ${BITCOIN_GOLD_PREFIX}/lib/libbitcoinconsensus.so.0.0.0
