--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -93,3 +93,6 @@ FROM alpine:3.9
 
 LABEL maintainer.0="João Fonseca (@joaopaulofonseca)" \
   maintainer.1="Pedro Branco (@pedrobranco)" \
+  maintainer.2="Rui Marinho (@ruimarinho)"
+
+RUN adduser -S bitcoingold
