--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -98,3 +98,4 @@ LABEL maintainer.0="João Fonseca (@joaopaulofonseca)" \
 RUN adduser -S bitcoingold
 RUN apk --no-cache add \
   boost \
+  boost-program_options \
