--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -108,3 +108,4 @@ RUN apk --no-cache add \
 ENV BITCOIN_GOLD_DATA=/home/bitcoingold/.bitcoingold
 ENV BITCOIN_GOLD_VERSION=0.15.2
 ENV BITCOIN_GOLD_PREFIX=/opt/bitcoin-gold-${BITCOIN_GOLD_VERSION}
+ENV PATH=${BITCOIN_GOLD_PREFIX}/bin:$PATH
