\tmodified:   _config.yml

--- a/0.15/alpine/Dockerfile
+++ b/0.15/alpine/Dockerfile
@@ -109,3 +109,6 @@ ENV BITCOIN_GOLD_DATA=/home/bitcoingold/.bitcoingold
 ENV BITCOIN_GOLD_VERSION=0.15.2
 ENV BITCOIN_GOLD_PREFIX=/opt/bitcoin-gold-${BITCOIN_GOLD_VERSION}
 ENV PATH=${BITCOIN_GOLD_PREFIX}/bin:$PATH
+
+COPY --from=bitcoin-gold /opt /opt
+COPY docker-entrypoint.sh /entrypoint.sh
