--- a/0.17/Dockerfile
+++ b/0.17/Dockerfile
@@ -4,3 +4,5 @@ FROM debian:stable-slim
 LABEL maintainer.0="João Fonseca (@joaopaulofonseca)" \
   maintainer.1="Pedro Branco (@pedrobranco)" \
   maintainer.2="Rui Marinho (@ruimarinho)"
+
+RUN useradd -r bitcoingold \
