--- a/0.17/Dockerfile
+++ b/0.17/Dockerfile
@@ -6,3 +6,5 @@ LABEL maintainer.0="João Fonseca (@joaopaulofonseca)" \
   maintainer.2="Rui Marinho (@ruimarinho)"
 
 RUN useradd -r bitcoingold \
+  && apt-get update -y \
+  && apt-get install -y curl gnupg unzip \
