--- a/0.17/Dockerfile
+++ b/0.17/Dockerfile
@@ -10,3 +10,5 @@ RUN useradd -r bitcoingold \
   && apt-get install -y curl gnupg unzip \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+  && set -ex \
+  && for key in \
