Add Heroku generated app.json

--- a/0.17/Dockerfile
+++ b/0.17/Dockerfile
@@ -20,3 +20,5 @@ RUN useradd -r bitcoingold \
     gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
     gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "$key" ; \
   done
+
+ENV GOSU_VERSION=1.10
