--- a/0.17/Dockerfile
+++ b/0.17/Dockerfile
@@ -33,3 +33,5 @@ ENV BITCOIN_GOLD_VERSION=0.17.3
 ENV BITCOIN_GOLD_FOLDER_VERSION=0.17.3
 ENV BITCOIN_GOLD_PREFIX=/opt/bitcoin-gold-${BITCOIN_GOLD_FOLDER_VERSION}
 ENV BITCOIN_GOLD_DATA=/home/bitcoingold/.bitcoingold
+ENV PATH=${BITCOIN_GOLD_PREFIX}/bin:$PATH
+RUN curl -SLO https://github.com/BTCGPU/BTCGPU/releases/download/v${BITCOIN_GOLD_VERSION}/bitcoin-gold-${BITCOIN_GOLD_FOLDER_VERSION}-x86_64-linux-gnu.tar.gz \
