Remove unnecessary deps

--- a/0.17/Dockerfile
+++ b/0.17/Dockerfile
@@ -40,3 +40,5 @@ RUN curl -SLO https://github.com/BTCGPU/BTCGPU/releases/download/v${BITCOIN_GOLD
   && grep " bitcoin-gold-${BITCOIN_GOLD_FOLDER_VERSION}-x86_64-linux-gnu.tar.gz\$" SHA256SUMS.asc | sha256sum -c - \
   && tar -xzf *.tar.gz -C /opt \
   && rm *.tar.gz
+
+COPY docker-entrypoint.sh /entrypoint.sh
