--- a/0.17/Dockerfile
+++ b/0.17/Dockerfile
@@ -44,3 +44,5 @@ RUN curl -SLO https://github.com/BTCGPU/BTCGPU/releases/download/v${BITCOIN_GOLD
 COPY docker-entrypoint.sh /entrypoint.sh
 
 VOLUME ["/home/bitcoingold/.bitcoingold"]
+
+EXPOSE 8332 8338 18332 18338 18444
