--- a/0.17/Dockerfile
+++ b/0.17/Dockerfile
@@ -46,3 +46,5 @@ COPY docker-entrypoint.sh /entrypoint.sh
 VOLUME ["/home/bitcoingold/.bitcoingold"]
 
 EXPOSE 8332 8338 18332 18338 18444
+
+ENTRYPOINT ["/entrypoint.sh"]
