ACPI / PM: Fix resource_lock dead lock in acpi_power_on_device

--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -6,3 +6,5 @@ RUN apk --no-cache add autoconf
 RUN apk --no-cache add automake
 RUN apk --no-cache add build-base
 RUN apk --no-cache add libressl
+
+ENV BERKELEYDB_VERSION=db-4.8.30.NC
