--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -8,3 +8,4 @@ RUN apk --no-cache add build-base
 RUN apk --no-cache add libressl
 
 ENV BERKELEYDB_VERSION=db-4.8.30.NC
+ENV BERKELEYDB_PREFIX=/opt/${BERKELEYDB_VERSION}
