--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -12,3 +12,4 @@ ENV BERKELEYDB_PREFIX=/opt/${BERKELEYDB_VERSION}
 
 RUN wget https://download.oracle.com/berkeley-db/${BERKELEYDB_VERSION}.tar.gz
 RUN tar -xzf *.tar.gz
+RUN sed s/__atomic_compare_exchange/__atomic_compare_exchange_db/g -i ${BERKELEYDB_VERSION}/dbinc/atomic.h
