--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -30,3 +30,4 @@ COPY --from=berkeleydb /opt /opt
 RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories
 RUN apk --no-cache add autoconf
 RUN apk --no-cache add automake
+RUN apk --no-cache add boost-dev
