--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -32,3 +32,5 @@ RUN apk --no-cache add autoconf
 RUN apk --no-cache add automake
 RUN apk --no-cache add boost-dev
 RUN apk --no-cache add build-base
+RUN apk --no-cache add chrpath
+RUN apk --no-cache add file
