Fix spelling in README

--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -36,3 +36,5 @@ RUN apk --no-cache add chrpath
 RUN apk --no-cache add file
 RUN apk --no-cache add gnupg
 RUN apk --no-cache add libevent-dev
+RUN apk --no-cache add libressl
+RUN apk --no-cache add libressl-dev
