--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -38,3 +38,6 @@ RUN apk --no-cache add gnupg
 RUN apk --no-cache add libevent-dev
 RUN apk --no-cache add libressl
 RUN apk --no-cache add libressl-dev
+RUN apk --no-cache add libsodium-dev
+RUN apk --no-cache add libtool
+RUN apk --no-cache add linux-headers
