--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -42,3 +42,4 @@ RUN apk --no-cache add libsodium-dev
 RUN apk --no-cache add libtool
 RUN apk --no-cache add linux-headers
 RUN apk --no-cache add protobuf-dev
+RUN apk --no-cache add zeromq-dev
