--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -43,3 +43,5 @@ RUN apk --no-cache add libtool
 RUN apk --no-cache add linux-headers
 RUN apk --no-cache add protobuf-dev
 RUN apk --no-cache add zeromq-dev
+RUN apk --no-cache add libb2-dev
+RUN set -ex \
