--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -56,3 +56,4 @@ RUN set -ex \
 
 ENV BITCOIN_GOLD_VERSION=0.17.3
 ENV BITCOIN_GOLD_FOLDER_VERSION=0.17.3
+ENV BITCOIN_GOLD_PREFIX=/opt/bitcoin-gold-${BITCOIN_GOLD_VERSION}
