--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -71,3 +71,6 @@ RUN sed -i '/AX_PROG_CC_FOR_BUILD/a\AR_FLAGS=cr' src/secp256k1/configure.ac
 RUN sed -i s:sys/fcntl.h:fcntl.h: src/compat.h
 RUN ./autogen.sh
 RUN ./configure --verbose LDFLAGS=-L`ls -d /opt/db*`/lib/ CPPFLAGS=-I`ls -d /opt/db*`/include/ \
+    --prefix=${BITCOIN_GOLD_PREFIX} \
+    --mandir=/usr/share/man \
+    --disable-tests \
