--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -84,3 +84,5 @@ RUN make -j4
 RUN make install
 RUN strip ${BITCOIN_GOLD_PREFIX}/bin/bgold-cli
 RUN strip ${BITCOIN_GOLD_PREFIX}/bin/bitcoin-tx
+RUN strip ${BITCOIN_GOLD_PREFIX}/bin/bgoldd
+RUN strip ${BITCOIN_GOLD_PREFIX}/lib/libbitcoinconsensus.a
