--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -89,3 +89,4 @@ RUN strip ${BITCOIN_GOLD_PREFIX}/lib/libbitcoinconsensus.a
 RUN strip ${BITCOIN_GOLD_PREFIX}/lib/libbitcoinconsensus.so.0.0.0
 
 # Build stage for compiled artifacts
+FROM alpine:3.9
