--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -94,3 +94,5 @@ FROM alpine:3.9
 LABEL maintainer.0="João Fonseca (@joaopaulofonseca)" \
   maintainer.1="Pedro Branco (@pedrobranco)" \
   maintainer.2="Rui Marinho (@ruimarinho)"
+
+RUN adduser -S bitcoingold
