chore(package): update pre-commit to version 1.2.0

--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -96,3 +96,6 @@ LABEL maintainer.0="João Fonseca (@joaopaulofonseca)" \
   maintainer.2="Rui Marinho (@ruimarinho)"
 
 RUN adduser -S bitcoingold
+
+RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories
+RUN apk --no-cache add \
