--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -109,3 +109,5 @@ RUN apk --no-cache add \
   su-exec
 
 ENV BITCOIN_GOLD_DATA=/home/bitcoingold/.bitcoingold
+ENV BITCOIN_GOLD_VERSION=0.17.3
+ENV BITCOIN_GOLD_PREFIX=/opt/bitcoin-gold-${BITCOIN_GOLD_VERSION}
