nfs: fix dio deadlock when O_DIRECT flag is flipped

--- a/0.17/alpine/Dockerfile
+++ b/0.17/alpine/Dockerfile
@@ -114,3 +114,4 @@ ENV BITCOIN_GOLD_PREFIX=/opt/bitcoin-gold-${BITCOIN_GOLD_VERSION}
 ENV PATH=${BITCOIN_GOLD_PREFIX}/bin:$PATH
 
 COPY --from=bitcoin-gold /opt /opt
+COPY docker-entrypoint.sh /entrypoint.sh
